force-app/main/default/objects/Compliance_Control__mdt/Compliance_Control__mdt.object-meta.xml
<CustomObject>
    <label>Compliance Control</label>
    <pluralLabel>Compliance Controls</pluralLabel>
    <description>Compliance control definitions for frameworks</description>
</CustomObject>