force-app/main/default/objects/Compliance_Control__mdt/fields/Auto_Remediate__c.field-meta.xml
<CustomField>
    <fullName>Auto_Remediate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Remediate</label>
    <type>Checkbox</type>
</CustomField>