force-app/main/default/objects/Compliance_Control__mdt/fields/Control_Description__c.field-meta.xml
<CustomField>
    <fullName>Control_Description__c</fullName>
    <description>Full description of the control requirements</description>
    <label>Control Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>