force-app/main/default/objects/Compliance_Control__mdt/fields/Control_Name__c.field-meta.xml
<CustomField>
    <fullName>Control_Name__c</fullName>
    <description>Human-readable control name</description>
    <label>Control Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>