force-app/main/default/objects/Compliance_Control__mdt/fields/Evaluation_Query__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Query__c</fullName>
    <description>SOQL query template used to evaluate compliance with this control</description>
    <label>Evaluation Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>