force-app/main/default/objects/Compliance_Control__mdt/fields/Related_Policies__c.field-meta.xml
<CustomField>
    <fullName>Related_Policies__c</fullName>
    <description>Comma-separated list of related policy codes from Compliance_Policy__mdt</description>
    <label>Related Policies</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>