force-app/main/default/objects/Compliance_Control__mdt/fields/Threshold_Type__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Type__c</fullName>
    <description>Type of threshold check for compliance evaluation</description>
    <label>Threshold Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COUNT</fullName>
                <default>true</default>
                <label>Count</label>
            </value>
            <value>
                <fullName>PERCENTAGE</fullName>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>BOOLEAN</fullName>
                <label>Boolean</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>