force-app/main/default/objects/Compliance_Control__mdt/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Threshold value for compliance (interpretation depends on Threshold_Type__c)</description>
    <label>Threshold Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>